tmp/log/2024-03-05_06:23:33.build.log
-- Configuring done
-- Generating done
-- Build files have been written to: /home/kaizen/c_project/build
Scanning dependencies of target L1
[ 50%] Building CXX object CMakeFiles/L1.dir/src/L1/main.cpp.o
/home/kaizen/c_project/src/L1/main.cpp: In function ‘int main()’:
/home/kaizen/c_project/src/L1/main.cpp:7:8: error: no match for ‘operator>>’ (operand types are ‘std::ostream’ {aka ‘std::basic_ostream<char>’} and ‘const char [6]’)
    7 |   cout >> "hello" >> endl;
      |   ~~~~ ^~ ~~~~~~~
      |   |       |
      |   |       const char [6]
      |   std::ostream {aka std::basic_ostream<char>}
In file included from /usr/include/c++/9/string:56,
                 from /usr/include/c++/9/bits/locale_classes.h:40,
                 from /usr/include/c++/9/bits/ios_base.h:41,
                 from /usr/include/c++/9/ios:42,
                 from /usr/include/c++/9/ostream:38,
                 from /usr/include/c++/9/iostream:39,
                 from /home/kaizen/c_project/src/L1/main.cpp:1:
/usr/include/c++/9/bits/basic_string.tcc:1466:5: note: candidate: ‘template<class _CharT, class _Traits, class _Alloc> std::basic_istream<_CharT, _Traits>& std::operator>>(std::basic_istream<_CharT, _Traits>&, std::__cxx11::basic_string<_CharT, _Traits, _Allocator>&)’
 1466 |     operator>>(basic_istream<_CharT, _Traits>& __in,
      |     ^~~~~~~~
/usr/include/c++/9/bits/basic_string.tcc:1466:5: note:   template argument deduction/substitution failed:
/home/kaizen/c_project/src/L1/main.cpp:7:11: note:   ‘std::ostream’ {aka ‘std::basic_ostream<char>’} is not derived from ‘std::basic_istream<_CharT, _Traits>’
    7 |   cout >> "hello" >> endl;
      |           ^~~~~~~
In file included from /usr/include/c++/9/istream:991,
                 from /usr/include/c++/9/iostream:40,
                 from /home/kaizen/c_project/src/L1/main.cpp:1:
/usr/include/c++/9/bits/istream.tcc:931:5: note: candidate: ‘template<class _CharT, class _Traits> std::basic_istream<_CharT, _Traits>& std::operator>>(std::basic_istream<_CharT, _Traits>&, _CharT&)’
  931 |     operator>>(basic_istream<_CharT, _Traits>& __in, _CharT& __c)
      |     ^~~~~~~~
/usr/include/c++/9/bits/istream.tcc:931:5: note:   template argument deduction/substitution failed:
/home/kaizen/c_project/src/L1/main.cpp:7:11: note:   ‘std::ostream’ {aka ‘std::basic_ostream<char>’} is not derived from ‘std::basic_istream<_CharT, _Traits>’
    7 |   cout >> "hello" >> endl;
      |           ^~~~~~~
In file included from /usr/include/c++/9/iostream:40,
                 from /home/kaizen/c_project/src/L1/main.cpp:1:
/usr/include/c++/9/istream:756:5: note: candidate: ‘template<class _Traits> std::basic_istream<char, _Traits>& std::operator>>(std::basic_istream<char, _Traits>&, unsigned char&)’
  756 |     operator>>(basic_istream<char, _Traits>& __in, unsigned char& __c)
      |     ^~~~~~~~
/usr/include/c++/9/istream:756:5: note:   template argument deduction/substitution failed:
/home/kaizen/c_project/src/L1/main.cpp:7:11: note:   ‘std::ostream’ {aka ‘std::basic_ostream<char>’} is not derived from ‘std::basic_istream<char, _Traits>’
    7 |   cout >> "hello" >> endl;
      |           ^~~~~~~
In file included from /usr/include/c++/9/iostream:40,
                 from /home/kaizen/c_project/src/L1/main.cpp:1:
/usr/include/c++/9/istream:761:5: note: candidate: ‘template<class _Traits> std::basic_istream<char, _Traits>& std::operator>>(std::basic_istream<char, _Traits>&, signed char&)’
  761 |     operator>>(basic_istream<char, _Traits>& __in, signed char& __c)
      |     ^~~~~~~~
/usr/include/c++/9/istream:761:5: note:   template argument deduction/substitution failed:
/home/kaizen/c_project/src/L1/main.cpp:7:11: note:   ‘std::ostream’ {aka ‘std::basic_ostream<char>’} is not derived from ‘std::basic_istream<char, _Traits>’
    7 |   cout >> "hello" >> endl;
      |           ^~~~~~~
In file included from /usr/include/c++/9/istream:991,
                 from /usr/include/c++/9/iostream:40,
                 from /home/kaizen/c_project/src/L1/main.cpp:1:
/usr/include/c++/9/bits/istream.tcc:963:5: note: candidate: ‘template<class _CharT2, class _Traits2> std::basic_istream<_CharT, _Traits>& std::operator>>(std::basic_istream<_CharT, _Traits>&, _CharT2*)’
  963 |     operator>>(basic_istream<_CharT, _Traits>& __in, _CharT* __s)
      |     ^~~~~~~~
/usr/include/c++/9/bits/istream.tcc:963:5: note:   template argument deduction/substitution failed:
/home/kaizen/c_project/src/L1/main.cpp:7:11: note:   ‘std::ostream’ {aka ‘std::basic_ostream<char>’} is not derived from ‘std::basic_istream<_CharT, _Traits>’
    7 |   cout >> "hello" >> endl;
      |           ^~~~~~~
In file included from /usr/include/c++/9/iostream:40,
                 from /home/kaizen/c_project/src/L1/main.cpp:1:
/usr/include/c++/9/istream:803:5: note: candidate: ‘template<class _Traits> std::basic_istream<char, _Traits>& std::operator>>(std::basic_istream<char, _Traits>&, unsigned char*)’
  803 |     operator>>(basic_istream<char, _Traits>& __in, unsigned char* __s)
      |     ^~~~~~~~
/usr/include/c++/9/istream:803:5: note:   template argument deduction/substitution failed:
/home/kaizen/c_project/src/L1/main.cpp:7:11: note:   ‘std::ostream’ {aka ‘std::basic_ostream<char>’} is not derived from ‘std::basic_istream<char, _Traits>’
    7 |   cout >> "hello" >> endl;
      |           ^~~~~~~
In file included from /usr/include/c++/9/iostream:40,
                 from /home/kaizen/c_project/src/L1/main.cpp:1:
/usr/include/c++/9/istream:808:5: note: candidate: ‘template<class _Traits> std::basic_istream<char, _Traits>& std::operator>>(std::basic_istream<char, _Traits>&, signed char*)’
  808 |     operator>>(basic_istream<char, _Traits>& __in, signed char* __s)
      |     ^~~~~~~~
/usr/include/c++/9/istream:808:5: note:   template argument deduction/substitution failed:
/home/kaizen/c_project/src/L1/main.cpp:7:11: note:   ‘std::ostream’ {aka ‘std::basic_ostream<char>’} is not derived from ‘std::basic_istream<char, _Traits>’
    7 |   cout >> "hello" >> endl;
      |           ^~~~~~~
In file included from /usr/include/c++/9/iostream:40,
                 from /home/kaizen/c_project/src/L1/main.cpp:1:
/usr/include/c++/9/istream:980:5: note: candidate: ‘template<class _Istream, class _Tp> typename std::enable_if<std::__and_<std::__not_<std::is_lvalue_reference<_Tp> >, std::__is_convertible_to_basic_istream<_Istream>, std::__is_extractable<typename std::__is_convertible_to_basic_istream<_Tp>::__istream_type, _Tp&&, void> >::value, typename std::__is_convertible_to_basic_istream<_Tp>::__istream_type>::type std::operator>>(_Istream&&, _Tp&&)’
  980 |     operator>>(_Istream&& __is, _Tp&& __x)
      |     ^~~~~~~~
/usr/include/c++/9/istream:980:5: note:   template argument deduction/substitution failed:
/usr/include/c++/9/istream: In substitution of ‘template<class _Istream, class _Tp> typename std::enable_if<std::__and_<std::__not_<std::is_lvalue_reference<_Tp> >, std::__is_convertible_to_basic_istream<_Istream>, std::__is_extractable<typename std::__is_convertible_to_basic_istream<_Tp>::__istream_type, _Tp&&, void> >::value, typename std::__is_convertible_to_basic_istream<_Tp>::__istream_type>::type std::operator>>(_Istream&&, _Tp&&) [with _Istream = std::basic_ostream<char>&; _Tp = const char (&)[6]]’:
/home/kaizen/c_project/src/L1/main.cpp:7:11:   required from here
/usr/include/c++/9/istream:980:5: error: no type named ‘type’ in ‘struct std::enable_if<false, void>’
make[2]: *** [CMakeFiles/L1.dir/build.make:63: CMakeFiles/L1.dir/src/L1/main.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:76: CMakeFiles/L1.dir/all] Error 2
make: *** [Makefile:84: all] Error 2
